force-app/main/default/objects/CustomObjectOne__c/CustomObjectOne__c.object-meta.xml
<CustomObject>
    <description>Custom Object One is a mock custom object</description>
    <label>Custom Object One</label>
    <nameField>
        <label>CustomObjectOne Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Object One</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>