force-app/main/default/objects/CustomObjectOne__c/fields/CurrencyOne__c.field-meta.xml
<CustomField>
    <fullName>CurrencyOne__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Currency One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>