force-app/main/default/objects/CustomObjectOne__c/fields/DateOne__c.field-meta.xml
<CustomField>
    <fullName>DateOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Date One</label>
    <type>Date</type>
</CustomField>