force-app/main/default/objects/CustomObjectOne__c/fields/DateTimeOne__c.field-meta.xml
<CustomField>
    <fullName>DateTimeOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Date/Time One</label>
    <type>DateTime</type>
</CustomField>