force-app/main/default/objects/CustomObjectOne__c/fields/EmailOne__c.field-meta.xml
<CustomField>
    <fullName>EmailOne__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Description</description>
    <externalId>true</externalId>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Email One</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>