force-app/main/default/objects/CustomObjectOne__c/fields/FormulaOne__c.field-meta.xml
<CustomField>
    <fullName>FormulaOne__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>