force-app/main/default/objects/CustomObjectOne__c/fields/GeolocationOne__c.field-meta.xml
<CustomField>
    <fullName>GeolocationOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Geolocation One</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>