force-app/main/default/objects/CustomObjectOne__c/fields/MultiSelectPicklistOne__c.field-meta.xml
<CustomField>
    <fullName>MultiSelectPicklistOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Multi-Select Picklist One</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>