force-app/main/default/objects/CustomObjectOne__c/fields/NumberOne__c.field-meta.xml
<CustomField>
    <fullName>NumberOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Number One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>