force-app/main/default/objects/CustomObjectOne__c/fields/PercentOne__c.field-meta.xml
<CustomField>
    <fullName>PercentOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Percent One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>