force-app/main/default/objects/CustomObjectOne__c/fields/PhoneOne__c.field-meta.xml
<CustomField>
    <fullName>PhoneOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Phone One</label>
    <type>Phone</type>
</CustomField>