force-app/main/default/objects/CustomObjectOne__c/fields/PicklistOne__c.field-meta.xml
<CustomField>
    <fullName>PicklistOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Picklist One</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>Five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>