force-app/main/default/objects/CustomObjectOne__c/fields/PicklistTwo__c.field-meta.xml
<CustomField>
    <fullName>PicklistTwo__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Picklist Two</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalValueSetOne</valueSetName>
    </valueSet>
</CustomField>