force-app/main/default/objects/CustomObjectOne__c/fields/TextAreaLongOne__c.field-meta.xml
<CustomField>
    <fullName>TextAreaLongOne__c</fullName>
    <label>Text Area Long One</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>