force-app/main/default/objects/CustomObjectOne__c/fields/TextAreaOne__c.field-meta.xml
<CustomField>
    <fullName>TextAreaOne__c</fullName>
    <label>Text Area One</label>
    <type>TextArea</type>
</CustomField>