force-app/main/default/objects/CustomObjectOne__c/fields/TextAreaRichOne__c.field-meta.xml
<CustomField>
    <fullName>TextAreaRichOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Text Area Rich One</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>