force-app/main/default/objects/CustomObjectOne__c/fields/TextEncryptedOne__c.field-meta.xml
<CustomField>
    <fullName>TextEncryptedOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Text Encrypted One</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>