force-app/main/default/objects/CustomObjectOne__c/fields/TextOne__c.field-meta.xml
<CustomField>
    <fullName>TextOne__c</fullName>
    <label>Text One</label>
    <length>255</length>
    <type>Text</type>
</CustomField>