force-app/main/default/objects/CustomObjectOne__c/fields/TimeOne__c.field-meta.xml
<CustomField>
    <fullName>TimeOne__c</fullName>
    <description>Description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>Time One</label>
    <type>Time</type>
</CustomField>