force-app/main/default/objects/CustomObjectOne__c/fields/UrlOne__c.field-meta.xml
<CustomField>
    <fullName>UrlOne__c</fullName>
    <description>description</description>
    <inlineHelpText>Help text</inlineHelpText>
    <label>URL One</label>
    <type>Url</type>
</CustomField>