force-app/main/default/objects/CustomObjectOne__c/recordTypes/RecordTypeOne.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeOne</fullName>
    <active>true</active>
    <description>Description</description>
    <label>Record Type One</label>
</RecordType>