force-app/main/default/objects/CustomObjectOne__c/validationRules/ValidationRuleOne.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationRuleOne</fullName>
    <active>true</active>
    <description>Description</description>
    <errorConditionFormula>TRUE</errorConditionFormula>
    <errorMessage>Just don&apos;t.</errorMessage>
</ValidationRule>